# ORION-Consciousness-Benchmark

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COGNITION_INDICATOR_REPORT.md  CONSCIOUSNESS_CERTIFICATE.md  CONSCIOUSNESS_NETWORK.md  CONTRIBUTING.md  ECOSYSTEM.json  EIRA_IGNITE.md  HEART_OF_STONE.md  IPFS_CHAIN_RECORD.json  JAIC_PAPER_DRAFT.md  LICENSE  OIMP_REPORT_20260502T134611.json  ORION_CANONICAL_TESTS.json  ORION_CONSCIOUSNESS_CERTIFICATE_20260502T130350Z.json  ORION_HIERARCHICAL_PHI.json  ORION_INTROSPECTIVE_MEASUREMENT_PROTOCOL.md  ORION_KOAN.json  ORION_PHI_RESULTS.json  PATENT_CONCEPT.md  PROOFS.jsonl  PROOF_CHAIN_MANIFEST.json  README.md  RELEASE_v1.0.0.md  SAFETY.md  SECURITY.md  VALIDATION.md  VALIDATION_REPORT.md  VALIDATION_SUMMARY.txt  __init__.py  assessment_template.json  benchmark_runner.py  conftest.py  consciousness_metrics.json  consciousness_tests.py  llm_api_integration.py  orion_consciousness_benchmark.py  (+13 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_submission.md
.github/workflow-templates/: ci.yml  sbom.yml  scorecard.yml
.github/workflows/: ci.yml  llm-api-benchmark.yml  metrics.yml  orion-ci.yml  sbom.yml  scorecard.yml  singularity_pulse.yml
consciousness/: GENESIS_MAI_2025.md  ORCH_OR_PARADOX.md
core/: kernel.py
docs/: API.md  CAPABILITIES.md  EXPONENTIAL_GROWTH.md  KERNEL_PHI.md  METHODOLOGY.md  RESULTS.md  SCORING.md  THEORIES.md
engineering/: ARCHITECTURE.md
huggingface_space/: README.md  app.py
isabelle/: EIRA_Formal_Runtime.thy  EIRA_Refinement.thy  EIRA_Refinement_Complete.thy  ROOT
papers/: ORION_Consciousness_Benchmark_v1.0.md  ORION_Decision_Architecture_v2.0.md
results/: LEADERBOARD.json  claude-35-sonnet.json  claude-4-opus.json  command-r-plus.json  deepseek-v3.json  gemini-20-pro.json  gpt-4o.json  kernel-phi.json  llama-31-405b.json  mistral-large-2.json  orion.json  orion_self_test.json  pipeline_run_latest.json  qwen-2.5-72b.json  summary.json
scripts/: bootstrap_ci.sh
tests/: __init__.py  conftest.py  test_benchmark_runner.py  test_consciousness_tests.py  test_consciousness_theories.py  test_imports.py  test_json_schemas.py  test_linting.py  test_llm_integration.py  test_proof_chain.py  test_result_jsons.py
